# TranslationCUDA

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  benchmark.cu  demo.cu
examples/demo_sample_inputs/: c.txt  output.txt  rates.txt  times.txt
src/: CMakeLists.txt  CuTransKernels.cu  CuTransKernels.h  CuTransSimulator.cu  CuTransSimulator.h  cutrans.h
src/CuTransSimulator/: CMakeLists.txt  CuTransKernels.cu  CuTransKernels.h  CuTransSimulator.cu  CuTransSimulator.h  CuTransTemplatedKernels.h
tests/: CMakeLists.txt  ssa.cu  test_simple_gene.cu  zero_test.cpp
